# chat-project

./: .gitignore  README.md
client/: README.md
client/include/: README.md  chatclient.hpp  guiinterface.hpp  messageprocessor.hpp  sockets.hpp
client/include/Exception/: exception.hpp
client/include/Sockets/: sockets.hpp
client/include/myAlgorithms/: myAlgorithms.hpp
client/src/: Makefile  chatclient.cpp  client_chat  main.cpp  server.cpp  sockets.cpp  tags
client/src/Exception/: exception.cpp
client/src/Sockets/: '  sockets.cpp
client/src/myAlgorithms/: myAlgorithms.cpp
server/: CMakeLists.txt  README.md
server/include/: .Client.h.swp  .IPv4Address.h.swp  .ServerSocket.h.swp  .Socket.h.swp  .TCPSocket.h.swp  Client.h  ConstantsAndVaribles.hpp  IPv4Address.h  ServerSocket.h  Session.h  Socket.h  TCPSocket.h
server/include/Chat/: chat.hpp
server/include/ExceptionError/: Error.h
server/include/Processes/: ServerProcess.hpp  WorkerProcess.hpp
server/include/Sessions/: ClientSession.hpp  WorkerSession.hpp
server/lib/: config.conf
server/src/: .main.cpp.swp  CMakeLists.txt  Client.cpp  IPv4Address.cpp  Makefile  ServerSocket.cpp  Session.cpp  Socket.cpp  TCPSocket.cpp  main.cpp  server_chat
server/tests/: .mocks.cpp.swp  .mocks.h.swp  .test_server.cpp.swp  CMakeLists.txt  \  mocks.cpp  mocks.h  test_server.cpp
server/tests/test_Chat_CommandProcessLine/: test_Chat_CommandProcessLine.cpp
server/tests/test_SparseArray/: test_SparseArray.cpp  test_SparseArray_withMYSTR  test_SparseArray_withoutMYSTR
server/tests/test_String/: test_String.cpp
(+64 files in other folders)
